# chained-flow

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
collect_configs/: 1k_test_gsm8k.yaml  1k_train_gsm8k.yaml  3.5k_train_gsm8k.yaml  3.5k_train_gsm8k_resume.yaml  3k_train_gsm8k.yaml  64_train_gsm8k.yaml  64_train_gsm8k_resume.yaml  README.md  smoke_gsm8k.yaml  smoke_gsm8k_online.yaml
docs/: flow_table_formats.md
ideas/: flow_architecture.md
scripts/: collect_teacher_states.py  eval_chunked_flow.py  eval_flow.py  eval_flow_sweep.sh  eval_vae.py  merge_teacher_datasets.py  plot_flow_train_eval_loss.py  plot_vae_metrics.py  preprocess_flow_dataset.py  probe_flow_cached_vs_live.py  profile_flow_drafter.py  trace_flow_generation.py  train_chunked_flow.py  train_eval_vae_all.sh  train_flow_sweep.sh  train_hidden_mlp.py  train_vae.py
tests/: conftest.py  test_acceptance.py  test_chunked_flow.py  test_chunked_flow_eval.py  test_chunked_flow_train_config.py  test_collect_config.py  test_collect_teacher.py  test_generation.py  test_hidden_alignment.py  test_losses.py  test_merge_teacher_datasets.py  test_plot_vae_metrics.py  test_single_backbone.py  test_timing.py  test_train_config.py  test_trainer_module.py  test_vae.py  test_vae_dataset.py  test_vae_eval.py  test_vae_losses.py  test_vae_train_config.py  test_verifier.py  test_window_dataset.py  test_windows.py
train_configs/: README.md  smoke_mlp.yaml  smoke_vae.yaml  vae_1k_base.yaml  vae_1k_bigbeta.yaml  vae_6.5k_bigbeta.yaml  vae_6.5k_bigcos.yaml  (+9 more)
(+83 files in other folders)
