[project]
name = "chained-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0.0",
    "datasets>=4.4.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
